--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b794e2">  <td>20/06/08 19:59:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionTest.testMixedAssert()[pri:0, instance:AssertionTest@501edcf1]">testMixedAssert</td> 
-  <td>main@1052245076</td>   <td></td> </tr>
+<tr bgcolor="d2d3b1">  <td>20/06/15 21:22:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ExcelDataPrint.setUpExcel()[pri:0, instance:excelTest.ExcelDataPrint@3b07a0d6]">&gt;&gt;setUpExcel</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1923598304</td>   <td></td> </tr>
 </table>
